--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Quiz</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
     <div id="quiz-container">
@@ -18,6 +19,6 @@
         <button id="submit-answer">Submit Answer</button>
         <p id="feedback"></p>
     </div>
-    <script src="quiz.js"></script>
+    <script src="quiz.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
